feat: add deactivate-activate functionality to super admin

--- a/Backend/.enva
+++ b/Backend/.enva
@@ -10,11 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=lamasat
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u667390556_kmd_interiors
+DB_USERNAME=u667390556_kmd_interiors
+DB_PASSWORD=6kTj/ZaS]?Yi
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
