--- a/Backend/.env
+++ b/Backend/.env
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=lamasat
+DB_DATABASE=lamsat
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -58,3 +58,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID=699206075915-jrojf5de3chktjqo98r3oke8v1v3qk8d.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/api/v1/auth/google/callback
