Edit in Auth, Handle local and production

--- a/Backend/.env
+++ b/Backend/.env
@@ -62,3 +62,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GOOGLE_CLIENT_ID=699206075915-jrojf5de3chktjqo98r3oke8v1v3qk8d.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/api/v1/auth/google/callback
+
+LARAVEL_APP_UIAPI_BASE_URL=https://lamasat.cloud
