--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,4 @@
 CLIENT_ID = 699206075915-jrojf5de3chktjqo98r3oke8v1v3qk8d.apps.googleusercontent.com
 CLIENT_SECRET = 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
+
+REACT_APP_UIAPI_BASE_URL= https://api.lamasat.cloud
