feat: Adding facebook auth for admins login

--- a/Backend/.env
+++ b/Backend/.env
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=lamsat
+DB_PORT=3307
+DB_DATABASE=lamsat4
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -63,4 +63,7 @@ GOOGLE_CLIENT_ID=699206075915-jrojf5de3chktjqo98r3oke8v1v3qk8d.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/api/v1/auth/google/callback
 
-LARAVEL_APP_UIAPI_BASE_URL=https://lamasat.cloud
+FACEBOOK_CLIENT_ID=3725988217644294
+FACEBOOK_CLIENT_SECRET=bff1185021de6465dfef0e5f295d2b46
+# FACEBOOK_REDIRECT_URI=https://127.0.0.1:8000/api/v1/auth/facebook/callback
+FACEBOOK_REDIRECT_URI=https://3b44-41-33-215-70.ngrok-free.app/api/v1/auth/facebook/callback
