--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -57,3 +57,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+GOOGLE_CLIENT_ID= ADD_YOU_GOOGLE_ID
+GOOGLE_CLIENT_SECRET= ADD_YOU_GOOGLE_CLIENT_SECRET
+
+GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/api/v1/auth/google/callback
+
+FACEBOOK_CLIENT_ID= ADD_YOU_FACEBOOK_CLIENT_ID
+FACEBOOK_CLIENT_SECRET= ADD_YOU_FACEBOOK_CLIENT_SECRET
+
+# FACEBOOK_REDIRECT_URI=https://127.0.0.1:8000/api/v1/auth/facebook/callback
+FACEBOOK_REDIRECT_URI=https://3b44-41-33-215-70.ngrok-free.app/api/v1/auth/facebook/callback
