--- a/Backend/.enva
+++ b/Backend/.enva
@@ -1,6 +1,6 @@
 APP_NAME=kmd_designs
 APP_ENV=local
-APP_KEY=base64:n3PMGvpTIIm3s3R7y1jgHkR5CscUVzdHw8dr+HKpyLQ=
+APP_KEY=base64:ubQCdJlbnYpjHLe7zuhddYfp6lMJhKrThWhBF/o9D2k=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_ADMIN_URL=http://localhost/api/v1/dashboard
@@ -10,11 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=u667390556_kmd_interiors
-DB_USERNAME=u667390556_kmd_interiors
-DB_PASSWORD=6kTj/ZaS]?Yi
+DB_HOST=127.0.0.1
+DB_PORT=3307
+DB_DATABASE=lamsat4
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -58,3 +58,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/api/v1/auth/google/callback
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+# FACEBOOK_REDIRECT_URI=https://127.0.0.1:8000/api/v1/auth/facebook/callback
+FACEBOOK_REDIRECT_URI=https://3b44-41-33-215-70.ngrok-free.app/api/v1/auth/facebook/callback
