--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,35 +1,39 @@
-# Use official PHP image as the base image
-FROM php:8.2-fpm
+# Use PHP with Apache as the base image
+FROM php:8.2-apache as web
 
-# Install system dependencies
-RUN apt-get update && \
-    apt-get install -y \
+# Install Additional System Dependencies
+RUN apt-get update && apt-get install -y \
     libzip-dev \
-    zip \
-    unzip \
-    git \
-    && docker-php-ext-install pdo_mysql zip
+    zip
 
-# Enable pdo_mysql extension
-RUN docker-php-ext-enable pdo_mysql
+# Clear cache
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Install Composer
+# Enable Apache mod_rewrite for URL rewriting
+RUN a2enmod rewrite
+
+# Install PHP extensions
+RUN docker-php-ext-install pdo_mysql zip
+
+# Configure Apache DocumentRoot to point to Laravel's public directory
+# and update Apache configuration files
+ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
+RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
+RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
+
+
+# Copy the application code
+COPY . /var/www/html
+
+# Set the working directory
+WORKDIR /var/www/html
+
+# Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Set the working directory in the container
-WORKDIR /app
+# Install project dependencies
+RUN composer install
 
-# Install dependencies
-COPY composer.json composer.lock /app
-RUN composer install --no-scripts --no-autoloader
-
-# Copy the rest of the application code
-COPY . .
-
-# Generate Composer autoload file
-RUN composer dump-autoload
-
-EXPOSE 8000
-
-# Start PHP-FPM server
-CMD sleep 20; php artisan migrate; php artisan serve --host=0.0.0.0 --port=8000
+# Set permissions
+RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
+#CMD sleep 20; php artisan migrate; php artisan serve --host=0.0.0.0 --port=8000
